# Flappy-bird-cpp

./: CMakeLists.txt  Makefile  README.md
.cache/clangd/index/: game.cpp.543C9F7CE77EC784.idx  game.hpp.051EB707AAE80802.idx  main.cpp.2D749F58E5FDFB62.idx  test.cpp.A5515AB24F9E96CC.idx  test.hpp.7CB5927AE2082F21.idx
lib/: CMakeLists.txt  game.cpp  game.hpp
src/: CMakeLists.txt  main.cpp
